Make wait animation suddenly appear/disappear instead of fading in/out. Edit metadata for social media.

--- a/election-timeline/style.css
+++ b/election-timeline/style.css
@@ -521,6 +521,12 @@ svg.mini-timeline {
   animation-duration: 1s;
   animation-iteration-count: infinite;
   animation-direction: alternate;
+  visibility: hidden;
+  opacity: 0;
+}
+.shown .wait {
+  visibility: visible;
+  opacity: 1;
 }
 @keyframes keyframes1 {
   0%   { background-image: url('images/wait-animate/Asset 1-1@2x.png'); }
