election-timeline: add labels and dashed lines in conclusion

--- a/election-timeline/style.css
+++ b/election-timeline/style.css
@@ -226,14 +226,14 @@ h4 {
 }
 
 .mini-timeline {
-  margin-left: -135px;
+  margin-left: -125px;
   transition: all 1s ease;
   width: 40px;
   z-index: 1;
   pointer-events: none;
 }
 svg.mini-timeline {
-  margin-left: -125px;
+  margin-left: -115px;
   width: 320px;
   visibility: hidden;
   opacity: 0;
@@ -243,6 +243,12 @@ svg.mini-timeline {
   stroke: white;
   stroke-width: 1;
   /* stroke-dasharray: 5,5; */
+  transition: all 1s ease;
+}
+.timeline-dash {
+  fill: none;
+  stroke-width: 0.5;
+  stroke-dasharray: 5,5;
   transition: all 1s ease;
 }
 .timeline-mark {
@@ -273,6 +279,12 @@ svg.mini-timeline {
   transition: all 1s ease;
   /* transition: top 1s ease 1s; */
   background-image: url('images/Box@2x.png');
+}
+.timeline-label {
+  fill: #F0324B;
+  font-size: 12px;
+  transition: opacity 1s ease;
+  /* text-anchor: end; */
 }
 
 /* TIMELINE */
