--- a/election-timeline/style.css
+++ b/election-timeline/style.css
@@ -122,6 +122,16 @@ a:hover {
   /* z-index: -1; */
   transition: all 1s ease;
 }
+#intro .arrow {
+  width: 13px;
+  height: 8px;
+  margin-left: auto;
+  margin-right: auto;
+  background-image: url('images/arrow@2x.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
 .article {
   margin-top: 100vh;
   background-color: white;
@@ -160,7 +170,7 @@ h4 {
   text-align: right;
 }
 .top-space {
-  margin-top: 2em;
+  margin-top: 1.5em;
 }
 
 #counter {
