--- a/election-timeline/webfonts/stylesheet.css
+++ b/election-timeline/webfonts/stylesheet.css
@@ -18,22 +18,22 @@
 /* Font face The Matter */
 @font-face {
     font-family: 'The Matter';
-    src: url('TheMatter-Bold.eot'); /* IE9 Compat Modes */
-    src: url('TheMatter-Bold?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('TheMatter-Bold.woff2') format('woff2'), /* Super Modern Browsers */
-         url('TheMatter-Bold.woff') format('woff'), /* Pretty Modern Browsers */
-         url('TheMatter-Bold.ttf')  format('truetype');
+    src: url('thematter-bold.eot'); /* IE9 Compat Modes */
+    src: url('thematter-bold?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('thematter-bold.woff2') format('woff2'), /* Super Modern Browsers */
+         url('thematter-bold.woff') format('woff'), /* Pretty Modern Browsers */
+         url('thematter-bold.ttf')  format('truetype');
     font-weight: 600;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'The Matter';
-    src: url('TheMatter-ExtraBold.eot');
-    src: url('TheMatter-ExtraBold?#iefix') format('embedded-opentype'),
-         url('TheMatter-ExtraBold.woff2') format('woff2'),
-         url('TheMatter-ExtraBold.woff') format('woff'),
-         url('TheMatter-ExtraBold.ttf')  format('truetype');
+    src: url('thematter-extrabold.eot');
+    src: url('thematter-extrabold?#iefix') format('embedded-opentype'),
+         url('thematter-extrabold.woff2') format('woff2'),
+         url('thematter-extrabold.woff') format('woff'),
+         url('thematter-extrabold.ttf')  format('truetype');
     font-weight: 800;
     font-style: normal;
 }
