New data to tighten up the pace Adjust space & margin Fix counter trigger bug

--- a/election-timeline/style.css
+++ b/election-timeline/style.css
@@ -545,6 +545,7 @@ svg.mini-timeline {
 /* Animations */
 .wait {
   height: 162px;
+  margin-top: -75vh;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
