add google analytics, add fb:app_id meta, change url to https, add social links to header

--- a/election-timeline/header.css
+++ b/election-timeline/header.css
@@ -77,4 +77,5 @@
   font-weight: bold;
   color: #ef314a; }
 .site-header .navbar .social a {
-  padding: 0.5rem 0.7rem; }
+  padding: 0.5rem 0.7rem;
+  color: #000; }
